--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
     <string name="app_name">Cool Calc</string>
+    <string name="op_divide">Divide</string>
+    <string name="op_multiply">Multiply</string>
+    <string name="op_subtract">Subtract</string>
+    <string name="op_equals">Equal</string>
+    <string name="op_add">Add</string>
+    <string name="num0">0</string>
+    <string name="num1">1</string>
+    <string name="num2">2</string>
+    <string name="num3">3</string>
+    <string name="num4">4</string>
+    <string name="num5">5</string>
+    <string name="num6">6</string>
+    <string name="num7">7</string>
+    <string name="num8">8</string>
+    <string name="num9">9</string>
+    <string name="clear">CLEAR</string>
+
 </resources>
